# iso22000_fsms

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py
docs/: INSTALL.md  INVESTIGATION.md
docs/design/: 00_document_inventory.md  01_business_model.md  02_doctype_blueprint.md  03_permission_matrix.md  04_workflow_blueprint.md  05_integration_plan.md  06_fixtures_plan.md  QT 09 - Quy trinh Truy xuat Nguon goc.docx
iso22000_fsms/: api.py  boot.py  hooks.py  install.py  modules.txt  patches.txt  utils.py  workflow_validation.py
iso22000_fsms/config/: desktop.py  docs.py
iso22000_fsms/fixtures/: custom_docperm.json  custom_field.json  dashboard.json  dashboard_chart.json  email_template.json  fsms_document_category.json  fsms_emergency_scenario.json  fsms_ncr_source.json  fsms_prp_item.json  fsms_prp_item_template.json  fsms_risk_score_reference.json  fsms_supplier_category.json  notification.json  number_card.json  print_format.json  property_setter.json  report.json  role.json  workflow.json  workflow_action_master.json  workflow_state.json  workspace.json
iso22000_fsms/fsms_audit/: api.py  tasks.py
iso22000_fsms/fsms_communication/: api.py
iso22000_fsms/fsms_context_risk/: api.py  permissions.py  tasks.py
iso22000_fsms/fsms_core/: api.py
iso22000_fsms/fsms_document_control/: api.py  tasks.py
iso22000_fsms/fsms_emergency/: tasks.py
iso22000_fsms/fsms_equipment/: api.py  tasks.py
iso22000_fsms/fsms_haccp/: api.py  tasks.py
iso22000_fsms/fsms_ncr/: api.py  permissions.py  (+1 more)
scripts/: validate_shipped_docs.py
(+411 files in other folders)
